# opengl-game-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  install.bat
open-gl-game/: CMakeLists.txt  Camera.h  GLErrorCheck.h  Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  Shader.cpp  Shader.h  main.cpp
